--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .jumbotron {
   padding-top: 6rem;
-  background-color: #ffd700;
+  background-color: #f5d93d;
 }
 #projects {
   background-color: #ffd700;
